Happy that home page is now functional to some extend.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -284,6 +284,10 @@
 
             }
 
+            /* .grid {
+              float: left;
+            } */
+
             .grid-item a:hover {
                 text-decoration: none;
             }
@@ -480,20 +484,103 @@
 
                 <div class="grid pt-2">
 
-                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 m-0 p-0"></div>
+
+
                   <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
                     <div class="card p-0 bg-dark bg-shadow">
-                      <!-- <div class="badge badge-danger draft-badge">Draft</div>'; -->
 
                       <div class="badge badge-success draft-badge">Published</div>
-                      <img class="card-image-top rounded-top border border-dark" src="https://st4.depositphotos.com/5845354/19623/i/1600/depositphotos_196239144-stock-photo-bright-milkshake-sketch-made-markers.jpg"  alt="">
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
+											<div class="card-body p-1">
+												<h6 class="card-text">1 Battle of Chawinda</h6>
+												<div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
+											</div>
+										</div>
+				          </div>
+
+                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
+                    <div class="card p-0 bg-dark bg-shadow">
+
+                      <div class="badge badge-success draft-badge">Published</div>
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
+											<div class="card-body p-1">
+												<h6 class="card-text">2 Battle of Chawinda</h6>
+												<div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
+											</div>
+										</div>
+				          </div>
+
+                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
+                    <div class="card p-0 bg-dark bg-shadow">
+
+                      <div class="badge badge-success draft-badge">Published</div>
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
 											<div class="card-body p-1">
 												<h6 class="card-text">Battle of Chawinda</h6>
 												<div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
 											</div>
 										</div>
 				          </div>
-                  <div class='grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-2 pb-2'></div>
+
+                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
+                    <div class="card p-0 bg-dark bg-shadow">
+
+                      <div class="badge badge-success draft-badge">Published</div>
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
+											<div class="card-body p-1">
+												<h6 class="card-text">Battle of Chawinda</h6>
+												<div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
+											</div>
+										</div>
+				          </div>
+
+                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
+                    <div class="card p-0 bg-dark bg-shadow">
+
+                      <div class="badge badge-success draft-badge">Published</div>
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
+											<div class="card-body p-1">
+												<h6 class="card-text">Battle of Chawinda</h6>
+												<div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
+											</div>
+										</div>
+				          </div>
+
+                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
+                    <div class="card p-0 bg-dark bg-shadow">
+
+                      <div class="badge badge-success draft-badge">Published</div>
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
+											<div class="card-body p-1">
+												<h6 class="card-text">Battle of Chawinda</h6>
+												<div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
+											</div>
+										</div>
+				          </div>
+
+                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
+                    <div class="card p-0 bg-dark bg-shadow">
+
+                      <div class="badge badge-success draft-badge">Published</div>
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
+                      <div class="card-body p-1">
+                        <h6 class="card-text">Battle of Chawinda</h6>
+                        <div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="grid-item col-6 col-sm-4 col-md-3 col-lg-2 px-1 pb-2">
+                    <div class="card p-0 bg-dark bg-shadow">
+
+                      <div class="badge badge-success draft-badge">Published</div>
+                      <img class="card-image-top rounded-top border border-dark" src="https://i.ytimg.com/vi/EcHyvqueuyA/maxresdefault.jpg"  alt="">
+											<div class="card-body p-1">
+												<h6 class="card-text">Battle of Chawinda</h6>
+												<div class="mb-1"><small class="text-muted">created on 25 Apr 2018</small></div>
+											</div>
+										</div>
+				          </div>
 
                 </div>
 
